@startuml

'enum
enum Sensor_Type {
    HUMIDITY
    THERMOMETER
    LOAD_CELL
    PHOTO_DIODE
}


'struct (this one might be removed)
struct Cfg_Pump {
    +interval : uint64_t
    +duration : uint32_t
    +startup_delay : uint32_t
}

struct Cfg_Senosr {
    +name : String 
    +type: Sensor_Type
    +pin_in : uint8_t
    +uses_mux_adress : bool
    +mux_adress : uint8_t 
    +mux_adress_pins : vector<uint8_t> 
    +min : uint16_t 
    +max : uint16_t
}

'class
class Pump {
    -String name
    -int CONTROLL_PIN
    -Cfg_Pump cfg

    +Pump(Cfg_Pump cfg)

    -{static} water_interval_timer_callback() : void
    +start_timer(uint64_t interval) : void
    +stop_timer() : void
    +delete_timer() : void

    +update_config() : void
}

class Pump_Manager {

}


abstract class Sensor {
    -String name
    -Sensor_Type type

    -int newest_raw_value
    
    -int INPUT_PIN
    -int min_value
    -int max_value
    -int read_interval

    +Sensor(name, type, pin_in, min, max, interval)

    -{static?} read_timer_callback() : void
    +start_timer(uint64_t interval) : void
    +stop_timer() : void
    +delete_timer() : void

    +read_raw() : int
    +{abstract} read() : float

    +get_name() : String
    +get_type() : Sensor_Type
    +get_pin() : int
    +get_read_interval() : int
}

class Sensor_Manager {
    -map<Sensor_Type, map<string, *Sensor>> sensors
    
    +add_sensor(name, type, pin_in, min, max, interval) : void
    +remove_sensor(name: string) : void
    +remove_sensor(type: Sensor_Type) : void

    +sensor_count() : int
    +sensor_count_of_type(type: Sensor_Type): int

    +read_raw(data : &map<string, int>) : void
    +read(data : &map<string, int>) : void
}

class Humidity_Sensor {
    +read() : float
}

class Thermometer {
    +read() : float
}

class Load_Cell {
    +read() : float
}

class Photo_Diode {
    +read() : float
}

'her har jeg lite kontroll på hvordan dette faktisk kommer til å fingere 
class MQTT_Handler {
    -forward(manager : Pump_Manager&) ???
    +publish()
}


'relations

'Pump
Pump_Manager *- Pump
MQTT_Handler .> Pump_Manager

'Sensor
Sensor_Manager "1  " *-- "1..*" Sensor
Sensor <|-- Humidity_Sensor
Sensor <|-- Thermometer
Sensor <|-- Load_Cell
Sensor <|-- Photo_Diode
Sensor .> MQTT_Handler

@enduml